--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<p><span class="badge badge-light">Brazil</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SFL/743999698481274-product-owner'>SFL Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -72,11 +76,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/product/group-product-manager-experiences-1739157/?gh_src=82a8057f1'>Group Product Manager, Experiences | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/group-product-manager-experiences-1739157/?gh_src=82a8057f1'>Group Product Manager, Experiences | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/senior-product-manager-experiences-1920470/?gh_src=82a8057f1'>Senior Product Manager, Experiences | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/product/senior-product-manager-experiences-1920470/?gh_src=82a8057f1'>Senior Product Manager, Experiences | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -108,7 +112,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/huntergibbons/job/1tcdejbmpjfsd8op7g8jhjnyxc'>Technical Product Manager | Hunter Gibbons Career Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/huntergibbons/job/1tcdejbmpjfsd8op7g8jhjnyxc'>Technical Product Manager | Hunter Gibbons Career Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -132,7 +136,7 @@
 <p><span class="badge badge-light">Bellevue Bellevue, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1925456'>Job Application for Senior Product Designer at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1925456'>Job Application for Senior Product Designer at Dataminr</a></h5> 
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -164,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-for-japanese-market-tad-10049'>Product Manager for Japanese Market : TAD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-for-japanese-market-tad-10049'>Product Manager for Japanese Market : TAD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -206,7 +210,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oClgbfw8&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=n7SJoMwn'>Egnyte Careers - Senior Product Manager - Data Governance (Protect)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oClgbfw8&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=n7SJoMwn'>Egnyte Careers - Senior Product Manager - Data Governance (Protect)</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -230,7 +234,7 @@
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://portlandwebworks.applytojob.com/apply/dqETz50XsJ/Product-Owner-ONSITE-Sacramento-CA'>Product Owner - ONSITE - Sacramento, CA - Portland Webworks - Career Page</a></h5> 
+<h5><a href='http://portlandwebworks.applytojob.com/apply/dqETz50XsJ/Product-Owner-ONSITE-Sacramento-CA'>Product Owner - ONSITE - Sacramento, CA - Portland Webworks - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -284,7 +288,7 @@
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
+<h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -336,11 +340,11 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -448,10 +452,6 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <hr/>
 <h5><a href='https://wikimedia-deutschland.softgarden.io/job/5246357/Product-Manager-m-f-d-?jobDbPVId=14376022&amp;l=en'>Product Manager (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin, Germany</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/americanproducts/job/oONpbfwV'>American Products Careers - Product Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
