--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://resynetworkinc.applytojob.com/apply/TW1hoAaeYN/Site-Reliability-Engineer'>Site Reliability Engineer - Resy Network Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://resynetworkinc.applytojob.com/apply/TW1hoAaeYN/Site-Reliability-Engineer'>Site Reliability Engineer - Resy Network Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY     New York City</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -256,7 +256,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -270,7 +270,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -339,7 +339,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -369,7 +369,7 @@ believes?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -385,12 +385,12 @@ believes?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Site Reliability Engineer at leadtech.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://silverstripe.workable.com/jobs/1155618'>Site Reliability Engineer - SilverStripe</a></h5> 
+<h5><a href='https://silverstripe.workable.com/jobs/1155618'>Site Reliability Engineer - SilverStripe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 8, 2019 ... We are looking for an experienced Site Reliability Engineer to join our Platforms 
 team based in Wellington. At SilverStripe, our mission is to help everyone have?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oy97afwI&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nflHeMwM'>NICE inContact Careers - Senior Specialist Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oy97afwI&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nflHeMwM'>NICE inContact Careers - Senior Specialist Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
